
    o	as.POSIX[cl]t can now convert logical NAs.

    o	All installed packages (even those shipped with R) are
	given a `Built' field in the DESCRIPTION file.

    o	as.data.frame() now coerces logical matrices into logical
	columns (rather than factors).

    o	[[<-.data.frame no longer coerces character replacement values
	to factor.  This is consistent with using $ to replace and
	with S4.

    o	print.factor() has new arguments `max.levels' (with a smart default)
	and `width'.  print.ordered() is no longer needed.



DEPRECATED & DEFUNCT

    o	The assignment operator `_' is deprecated: a warning is
	given once per R session.

    o	The print.ordered() method is no longer needed, since handled by
        print.factor() and hence deprecated.

    o	arima0.diag() (package ts) is defunct.

    o	piechart() is defunct.


DOCUMENTATION CHANGES

    o	new demo(persp) containing some of the former example(persp) ones
	and more.


C-LEVEL FACILITIES

    o	Rversion.h is no longer automatically included by R.h.
	Include it explicitly if you need it.

    o	New entry point R_tmpnam in Utils.h.


INSTALLATION CHANGES

    o	R CMD INSTALL is now guaranteed to sort the R source files in
	ASCII order.


UTILITIES

    o	R CMD check now tests for mis-use on an installed or binary package.


BUG FIXES

    o	read.dcf() had a memory leak.

    o	Setting "tcl = a" in a highlevel graphic function worked almost
	as if par(tcl = a) was called (i.e. was persistent).  Further,
	after par(tcl= <.>), highlevel graphic setting of tcl didn't work
	anymore.  "tck" has now S' default -0.01 (when tcl=NA).

    o   data() was not checking if ./data was a directory before
	warning.

    o   Assignment beyond the end of character strings was filling
	with "", whereas changing the length extended with NA_STRING.
	Now NA_STRING is used for both.

    o	boxplot()s with logarithmic scale in "width-direction" now have
        proper widths, i.e. typically constant.


