@@ -139,13 +139,9 @@ else
 endif
 	@if test -f ${SPKG}/DESCRIPTION; then \
 	  $(SED) '/^\s*$$/d' ${SPKG}/DESCRIPTION  > ${DPKG}/DESCRIPTION; \
+	  echo "  adding build stamp to DESCRIPTION" ; \
+	  echo "Built: R" $(RVER)\;  Win32\;  `date` >> ${DPKG}/DESCRIPTION; \
 	fi
-ifneq ($(strip $(BUILD)),CROSS)
-ifeq ($(strip $(STAMP)),YES)
-	@echo "  adding build stamp to DESCRIPTION"
-	@echo "cat('Built: R ', R.version[['major']], '.', R.version[['minor']], ';  Win32;  ', format(Sys.time()), sep='')" | $(RHOME)/bin/Rterm --slave --vanilla >> ${DPKG}/DESCRIPTION
-endif
-endif
 
 $(DATA): $(DSOURCES)
 	@echo "  installing data files"
